--- a/2017/webcapture/3_server/package.json
+++ b/2017/webcapture/3_server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "co": "^4.6.0",
+    "mongoose": "^4.9.3",
     "phantom": "^4.0.1",
     "system": "^1.3.0"
   },
